--- a/src/pages/register/signup/signup.scss
+++ b/src/pages/register/signup/signup.scss
@@ -21,7 +21,7 @@
         left: 50%;
         transform: translateX(-50%);
         height: unset;
-    
+
         .logo {
             a {
                 svg {
@@ -30,31 +30,31 @@
                 }
             }
         }
-    
+
         .signup-header-right {
             display: flex;
             align-items: center;
             gap: 15px;
-    
+
             .dropdown {
                 background-color: #F5F5F5;
                 padding: 7px 7px;
                 border-radius: 5px;
                 position: relative;
-    
+
                 a {
                     display: flex;
                     align-items: center;
                     gap: 3px;
                     color: #303030;
-    
+
                     svg {
                         width: 15px;
                         height: 15px;
                     }
-    
+
                 }
-    
+
                 ul {
                     display: flex;
                     flex-direction: column;
@@ -63,14 +63,14 @@
                     position: absolute;
                     background-color: #41A58D;
                     left: 0;
-    
+
                     li {
                         a {
                             color: #fff;
                             display: flex;
                             align-items: center;
                             padding: 7px 15px;
-    
+
                             &:hover {
                                 text-decoration: underline;
                             }
@@ -78,7 +78,7 @@
                     }
                 }
             }
-    
+
             #signup {
                 background-color: #41A58D;
                 padding: 9px 13px;
@@ -86,8 +86,8 @@
                 color: #fff;
                 font-weight: 600;
                 border: 1px solid transparent;
-    
-    
+
+
             }
         }
     }
@@ -100,7 +100,7 @@
 
         .signup-top-text {
             text-align: center;
-            
+
             h3 {
                 font-size: 20px;
                 font-weight: 600;
@@ -114,11 +114,13 @@
                 font-size: 17px;
             }
         }
+
         form {
             // margin-top: 15px;
             display: flex;
             flex-direction: column;
             row-gap: 10px;
+
             .input-container {
                 display: flex;
                 flex-direction: column;
@@ -128,6 +130,7 @@
                 .a {
                     position: relative;
                     width: 100%;
+
                     svg {
                         position: absolute;
                         top: 50%;
@@ -136,14 +139,14 @@
                         width: 20px;
                         height: 20px;
                     }
-                    
+
                     .eye {
                         width: 20px;
                         height: 20px;
                         right: 9px;
                         left: unset;
                         cursor: pointer;
-                        
+
                         &.s {
                             fill: #41A58D;
                         }
@@ -166,9 +169,11 @@
                 label {
                     color: #1E1E1E;
                 }
+
                 #password {
                     padding-right: 35px;
                 }
+
                 input {
                     border: 2px solid #F2F2F2;
                     border-radius: 7px;
@@ -179,7 +184,8 @@
                     width: 100%;
                     padding-left: 35px;
 
-                    &:focus, &:valid {
+                    &:focus,
+                    &:valid {
                         border-color: #41A58D;
                     }
                 }
@@ -199,6 +205,7 @@
                 display: flex;
                 flex-direction: column;
                 row-gap: 10px;
+
                 h2 {
                     font-weight: 600;
                     font-size: 20px;
@@ -226,8 +233,9 @@
                         color: #1E1E1E;
                         font-size: 16px;
                         border: 2px solid #F2F2F2;
-                        
-                        &:valid, &:focus {
+
+                        &:valid,
+                        &:focus {
                             border: 2px solid #41A58D;
                         }
                     }
@@ -276,19 +284,74 @@
                 }
             }
         }
+
+        #registration-confirmation {
+            h2 {
+                font-weight: 600;
+                font-size: 20px;
+            }
+
+            h3 {
+                margin-top: 10px;
+                font-size: 16px;
+                font-weight: 500;
+            }
+
+            form {
+                margin-top: 10px;
+
+                .input-row {
+                    label {
+                        color: #1e1e1e;
+                    }
+
+                    .input-and-icon {
+                        position: relative;
+                        margin-top: 3px;
+
+                        img {
+                            position: absolute;
+                            top: 50%;
+                            transform: translateY(-50%);
+                            left: 5px;
+                        }
+
+                        input {
+                            border: 2px solid #F2F2F2;
+                            border-radius: 7px;
+                            padding: 5px 10px;
+                            height: 47px;
+                            outline: none;
+                            font-size: 16px;
+                            width: 100%;
+                            padding-left: 35px;
+
+                            &:focus,
+                            &:valid {
+                                border-color: #41A58D;
+                            }
+                        }
+                    }
+
+                }
+            }
+        }
     }
 }
 
 @media screen and (max-width: 500px) {
     #signup-cont {
         margin: 0;
+
         .signup-header {
             .signup-header-right {
                 display: none;
-            }           
-        }       
+            }
+        }
+
         .signup-container {
             margin: 0 12px;
+
             .signup-top-text {
                 text-align: start;
 
