--- a/src/components/loading/loading.scss
+++ b/src/components/loading/loading.scss
@@ -9,7 +9,7 @@
     left: 0;
     overflow: hidden;
     z-index: 9999999;
-    background-color: #00000025;
+    background-color: #fff;
 
     .spinner {
         width: 50px;
