--- a/src/components/weather/weather.scss
+++ b/src/components/weather/weather.scss
@@ -27,6 +27,10 @@
         .weather-left {
           display: flex;
           gap: 5px;
+
+          img {
+            width: 50px;
+          }
         }
 
         .nam {
