--- a/src/pages/documents/documents.scss
+++ b/src/pages/documents/documents.scss
@@ -59,6 +59,8 @@
     .docs {
         width: 100%;
         padding: 0 50px;
+        max-width: 1366px;
+        margin: 0 auto;
         .left-side {
             margin-top: 20px;
             padding: 20px;
