--- a/src/pages/coursesCategory/coursesCategory.scss
+++ b/src/pages/coursesCategory/coursesCategory.scss
@@ -4,7 +4,7 @@
     .to-back {
         background-color: #41A58D;
         height: 50px;
-        margin-top: 146px;
+        margin-top: 166px;
 
         .backInner {
             margin: 0 auto;
@@ -62,6 +62,7 @@
         gap: 20px;
         padding: 50px;
         max-width: 1366px;
+        min-height: 100vh;
         margin: 0 auto;
 
         .courses-cards {
@@ -72,19 +73,14 @@
             width: 100%;
 
             .course-card {
-                opacity: 0;
+                opacity: 1;
                 transform: translateY(30px);
                 transition: all 1s;
-                width: 280px;
-
-                &.revealed {
-                    opacity: 1;
-                    transform: unset;
-                }
+                width: 380px;
 
                 .card-img {
                     width: 100%;
-                    height: 190px;
+                    height: 220px;
 
                     img {
                         width: 100%;
