--- a/src/components/converter/converter.scss
+++ b/src/components/converter/converter.scss
@@ -10,7 +10,7 @@
         color: #fff;
     }
 
-    p {
+    div.currency-lines {
         padding: 13px 0;
         border-bottom: 1px solid #70BBAA;
         color: #fff;
